helm/lgtm/manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: lgtm
  annotations:
    cert-manager.io/cluster-issuer: my-ca-issuer
spec:
  ingressClassName: cilium
  rules:
    - host: "grafana.playground.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-grafana
                port:
                  number: 80

  tls:
    - hosts:
      - grafana.playground.io
      secretName: grafana-secret
